--- a/src/scss/layout/_common.scss
+++ b/src/scss/layout/_common.scss
@@ -2,7 +2,9 @@
 	overflow: hidden;		
 }
 .container{
+	@extend %clearfix;
 	max-width: 1230px;
+	width: 100%;
 	margin: 0 auto;
 	padding:0 15px;
 }
