--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,7 +1,9 @@
 $gray: #999;
-$black: #333;
+$black: #1d1d1d;
 $white: #fff;
 $light-blue: #39f;
+$red: #e93842;
+$gray: #4e4e4e;
 
 $base-font-sans-serif: 'Roboto', 'Arial', 'Helvetica Neue', 'Helvetica', sans-serif;
 $base-font-serif: 'Times New Roman', 'Times', 'Baskerville', 'Georgia', serif;
