--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,52 +1,73 @@
 // Typography
 //
 // Base font styles for headings and links.
-
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6,
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6,
 .h {
-  font-family: $headings-font-family;
-  font-weight: bold;
-  color: $headings-color;
-  margin: 0 0 10px 0;
+    font-family: $headings-font-family;
+    font-weight: bold;
+    color: $headings-color;
+    margin: 0 0 10px 0;
 }
 
-h1, .h1 {
-  font-size: $h1-font-size;
+h1,
+.h1 {
+    font-size: $h1-font-size;
 }
 
-h2, .h2 {
-  font-size: $h2-font-size;
+h2,
+.h2 {
+    font-size: $h2-font-size;
+    @include media('<desktop') {
+        font-size: 28px;
+    }
+    @include media('<tablet') {
+        font-size: 22px;
+    }
+    @include media('<phone') {
+      font-size:  20px;
+    }
+
 }
 
-h3, .h3 {
-  font-size: $h3-font-size;
+h3,
+.h3 {
+    font-size: $h3-font-size;
 }
 
-h4, .h4 {
-  font-size: $h4-font-size;
+h4,
+.h4 {
+    font-size: $h4-font-size;
 }
 
-h5, .h5 {
-  font-size: $h5-font-size;
+h5,
+.h5 {
+    font-size: $h5-font-size;
 }
 
-h6, .h6 {
-  font-size: $h6-font-size;
+h6,
+.h6 {
+    font-size: $h6-font-size;
 }
 
 p {
-  margin: 0 0 10px;
+    margin: 0 0 10px;
 }
 
 a {
-  color: $base-link-color;
-  &:hover,
-  &:focus {
-    text-decoration: none;
-  }
+    color: $base-link-color;
+    &:hover,
+    &:focus {
+        text-decoration: none;
+    }
 }
