--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,9 +1,29 @@
-.btn{
-	background:$red;
-	border-radius:20px;
-	padding:8px 20px;
-	font-size: 11px;
-	font-weight: 400;
-	text-decoration: none;
-	display: inline-block;
+.btn {
+    background: $red;
+    border-radius: 40px;
+    padding: 10px 22px;
+    font-size: 14px;
+    font-weight: 400;
+    text-decoration: none;
+    display: inline-block;
+    color: $white;
+@include media('<desktop') {
+padding:7px 15px;
+font-size: 13px;		
+}
+@include media('<tablet') {
+	font-size: 	12px;
+	padding:6px 10px;		
+}	
+    &.btn-contact {
+       font-size: inherit;
+        padding: 8px 5px;
+        background-color: $red;
+        border-radius: 4px;
+        color: $white !important;
+        letter-spacing: 0.2px;
+        &:hover {
+            background-color: $red-dark;
+        }
+    }
 }
