added video + popup

--- a/src/vendor_entries/vendor.scss
+++ b/src/vendor_entries/vendor.scss
@@ -4,3 +4,6 @@
 
 @import '../../node_modules/normalize.css/normalize';
 @import '../../node_modules/video.js/dist/video-js';
+@import '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox';
+@import '../../node_modules/owl.carousel/dist/assets/owl.carousel.css';
+@import '../../node_modules/owl.carousel/dist/assets/owl.theme.default';
