--- a/src/scss/components/_video-banner.scss
+++ b/src/scss/components/_video-banner.scss
@@ -1,58 +1,86 @@
 .video-banner {
     padding: 95px 0 60px;
     position: relative;
-    text-align:right;
+    text-align: right;
     z-index: 1;
     height: 549px;
     display: flex;
-    align-items:center;
-    justify-content:flex-end; 
-.video-js{
-	position: absolute;
-	top: -50%;
-	left:-50%;
-	right:-50%;
-	bottom:-50%;
-	height: auto;
-	width: auto;
-
-
+    align-items: center;
+    justify-content: flex-end;
+    // .video-js {
+    //     position: absolute;
+    //     top: -50%;
+    //     left: -50%;
+    //     right: -50%;
+    //     bottom: -50%;
+    //     height: auto;
+    //     width: auto;
+    // }
+    .h2 {
+        color: $white;
+        text-transform: uppercase;
+        margin-right: 18px;
+        margin-top: 0px;
+        margin-bottom: 24px;
+        line-height: 1.1;
+        position: relative;
+        z-index: 99;
+        @include media('<tablet') {
+            margin-right: 0;
+        }
+        span {
+            display: block;
+            font-weight: 300;
+            margin-right: 0;
+            margin-top: 0;
+        }
+    }
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: $gray;
+        opacity: .65;
+        z-index: -1;
+    }
+    .btn {
+        margin-right: 20px;
+        @include media('<tablet') {
+            margin-right: 0;
+        }
+    }
 }
-    .h2{
-    	color:$white;
-    	text-transform: uppercase;
-    	margin-right: 18px;
-    	margin-top: 0px;
-    	margin-bottom: 24px;
-    	line-height: 1.1;
-    	position: relative;
-    	z-index: 99;
-    	@include media('<tablet') {
-    		margin-right: 0;	
-    	}	
-    	span{
-    		display: block;
-    		font-weight: 300;
-    		margin-right: 0;
-    		margin-top: 0;
-    	}
-    }
-    &:after{
-    	content: '';
-    	position: absolute;
-    	top:0;
-    	left:0;
-    	right:0;
-    	bottom:0;
-    	background-color: $gray;
-    	opacity: .65;
-    	z-index: -1;
 
+.hide-content {
+    display: none;
+}
+
+#banner-video-poopup {
+    background-color: $dark;
+    padding: 10px;
+    .video-js {
+        @include media('<tablet') {
+            width: 100%;
+        }
     }
-    .btn{
-    	margin-right: 20px;
-@include media('<tablet') {
-	margin-right: 0;	
-}	
+    @include media('<tablet') {
+        width: 100%;
+    }
+    .vjs-big-play-button {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 60px;
+        height: 60px;
+        text-align: center;
+        border-radius: 50%;
+        line-height: 54px;
+        &:before {
+            line-height: 60px;
+        }
     }
 }
