added video carousel

--- a/src/scss/components/_video-banner.scss
+++ b/src/scss/components/_video-banner.scss
@@ -58,7 +58,7 @@
     display: none;
 }
 
-#banner-video-poopup {
+.hide-content {
     background-color: $dark;
     padding: 10px;
     .video-js {
