--- a/src/scss/components/_video-carousel.scss
+++ b/src/scss/components/_video-carousel.scss
@@ -40,7 +40,7 @@
         }
     }
     .popup-link {
-        @include animate(border-color);
+        @include animate(border-color background-color);
         display: block;
         position: relative;
         text-decoration: none;
@@ -48,6 +48,7 @@
         border-bottom: none;
         padding: 16px 2px 14px;
         border: 3px solid transparent;
+        background-color: rgba(51, 51, 51, 0);
         @include media('<desktop') {
             padding: 8px 3px;
         }
@@ -70,10 +71,12 @@
 
         &.hovered {
             border-color: black;
+              background-color: rgba(51,51,51,.45);
             .video-box {
                 &:after {
                     transform: scale(.5);
                 }
+                
             }
         }
     }
@@ -81,9 +84,9 @@
 
         position: relative;
         margin-bottom: 20px;
-@include media('<desktop') {
-	margin-bottom: 10px;
-}
+        @include media('<desktop') {
+            margin-bottom: 10px;
+        }
         &:after {
             @include animate(transform);
             transform: scale(1);
@@ -181,10 +184,10 @@
     .descr-box {
         font-size: 14px;
         text-align: center;
-          @include media('<desktop') {
-               
-                font-size: 12px;
-            }
+        @include media('<desktop') {
+
+            font-size: 12px;
+        }
         .country {
             text-align: center;
             display: block;
