product menu section added

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,4 +1,4 @@
-$gray: #999;
+$gray2: #999;
 $black: #1d1d1d;
 $dark:#262626;
 $white: #fff;
@@ -6,6 +6,8 @@ $light-blue: #39f;
 $red: #e93842;
 $red-dark:#9e2121;
 $gray: #4e4e4e;
+$gray-light: #efefef;
+$pink-light: #f38f95;
 
 $base-font-sans-serif: 'Roboto', 'Arial', 'Helvetica Neue', 'Helvetica', sans-serif;
 $base-font-serif: 'Times New Roman', 'Times', 'Baskerville', 'Georgia', serif;
