--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -66,6 +66,7 @@ p {
 
 a {
     color: $base-link-color;
+    text-decoration:    none;
     &:hover,
     &:focus {
         text-decoration: none;
