--- a/src/scss/pages/_products-page.scss
+++ b/src/scss/pages/_products-page.scss
@@ -16,30 +16,65 @@ $light-gray-2:	#eeeeee;
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 60px;
+	@include media('<tablet') {
+        flex-wrap: wrap;
+    }
+}
+
+.m-filter-opener {
+	display: none;
+	@include media('<tablet') {
+        display: block;
+        width: 100%;
+        background-color: $black;
+        color: $white;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+}
+
+.m-filter-open {
+	.filter-holder {
+		left: 0;
+	}
 }
 
 .filter-holder {
 	width: 250px;
 	color: $black;
+	@include media('<tablet') {
+		@include animate(left, .3s)
+        width: 100%;
+        position: relative;
+        left: 120%;
+    }
 	.filter {
 		background-color: $white;
 		font-size: 15px;
 		&-top {
-			padding: 12px;
 			margin-bottom: 7px;
+		}
+		&-main {
+			.filter-title {
+				font-weight: 600;
+				text-transform: uppercase;
+			}
 		}
 	}
 	.filter-title {
 		display: inline-block;
 		width: 100%;
+		padding: 12px;
+		font-size: 17px;
 		text-align: center;
 	}
 	.f-divider {
 		height: 1px;
 		background-color: $light-gray-2;
 	}
-	.selected-values-list {
+	.selected-attributes-list {
 		@extend %listreset;
+		padding: 12px;
 		li {
 			a {
 				color: inherit;
@@ -51,7 +86,7 @@ $light-gray-2:	#eeeeee;
 					content: "X";
 					display: inline-block;
 					font-weight: 500;
-					margin-right: 5px;
+					margin-right: 10px;
 				}
 			}
 		}
@@ -62,6 +97,7 @@ $light-gray-2:	#eeeeee;
 		text-align: center;
 		color: inherit;
 		text-decoration: none;
+		margin-bottom: 10px;
 		&:before {
 			content: 'X';
 			display: inline-block;
@@ -73,7 +109,42 @@ $light-gray-2:	#eeeeee;
 			font-size: 16px;
 			font-weight: 400;
 			color: $white;
+			margin-right: 5px;
 
+		}
+	}
+	.f-attribute-list {
+		@extend %listreset;
+		color: $black;
+		padding: 0 5px 8px 23px;
+		margin-bottom: 5px;
+		li {
+			position: relative;
+			.f-attribute {
+				color: inherit;
+				text-decoration: none;
+				&:before {
+					content: "";
+					display: inline-block;
+					width: 13px;
+					height: 13px;
+					border: 1px solid #cfcfcf;
+					border-radius: 3px;
+					font-weight: 500;
+					margin-right: 10px;
+				}
+			}
+			&.selected {
+				&:after {
+					content: "x";
+					position: absolute;
+					left: 4px;
+					top: 2px;
+					font-size: 13px;
+					line-height: 1;
+					font-weight: 500;
+				}
+			}
 		}
 	}
 }
@@ -84,7 +155,7 @@ $light-gray-2:	#eeeeee;
 	.section-title {
 		padding: 35px 15px 35px 119px;
 		margin-bottom: 22px;
-		h2 {
+		.h2 {
 			font-size: 47px;
 			line-height: 1;
 			font-weight: 600;
@@ -110,6 +181,11 @@ $light-gray-2:	#eeeeee;
 		margin-bottom: 42px;
 		position: relative;
 		overflow: hidden;
+		@include media('<tablet') {
+        	width: 80%;
+        	margin: 0 auto;
+        	margin-bottom: 20px;
+    	}
 		.product-link {
 			height: 164px;
 			display: flex;
@@ -120,6 +196,9 @@ $light-gray-2:	#eeeeee;
 			display: block;
 			width: 100%;
 			height: auto;
+			@include media('<tablet') {
+				width: 60%;
+	    		}
 			}
 		}
 		.item-name {
@@ -153,6 +232,7 @@ $light-gray-2:	#eeeeee;
 			content: " ";
 			position: absolute;
 			background-image: url(../images/favorite-mark-stars.svg);
+			background-repeat: no-repeat;
 			width: 24px;
 			height: 24px;
 			top: 86px;
