--- a/src/vendor_entries/vendor.scss
+++ b/src/vendor_entries/vendor.scss
@@ -7,3 +7,4 @@
 @import '../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox';
 @import '../../node_modules/owl.carousel/dist/assets/owl.carousel.css';
 @import '../../node_modules/owl.carousel/dist/assets/owl.theme.default';
+@import '../../node_modules/native-slide-toggle/src/nst.css';
