--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -4,5 +4,5 @@
 @import 'video-banner';
 @import 'video-carousel';
 @import 'banner';
-@import 'section-title';
+@import 'decoration-title';
 @import 'products-box';
