product menu pp desk

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -30,5 +30,7 @@
         background-color:   transparent;
         border: 1px solid $white;
         color:$white;
+        padding:6px 28px;
+        font-size: 16px;    
     }
 }
