--- a/src/scss/components/_video-carousel.scss
+++ b/src/scss/components/_video-carousel.scss
@@ -24,6 +24,7 @@
     background-image: url('../images/map.jpg');
     background-size: cover;
     background-position: 50% 50%;
+    margin-bottom: 66px;	
     video {
         opacity: 0;
         display: none;
