fixed poster css property

--- a/src/scss/components/_video-carousel.scss
+++ b/src/scss/components/_video-carousel.scss
@@ -17,6 +17,14 @@
         height: 100%;
         width: 100%;
     }
+    .seeThru-poster{
+    	top:-2px !important;
+    	left: -2 !important;
+    	right: -2px !important;
+    	bottom:-2px !important;
+width:auto !important;
+height: auto !important;
+    }
 }
 
 .carusel-wrapper {
